AR-z-ISTIO-HostLevel-TrafficSplitting/service_clusterip-Server-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable-service
spec:
  ports:
  - port: 8080
    name: http
    protocol: TCP
    targetPort: 8080
  selector:
    name: app07
  sessionAffinity: None
  type: ClusterIP
